fixed dark mode

--- a/src/Pages/Trending/style.css
+++ b/src/Pages/Trending/style.css
@@ -19,11 +19,13 @@
     text-decoration: none;
     font-size: small;
     margin-left: 10px;
-    opacity: 0.7;
+    opacity: 0.9;
+    color: #3385ff;
 }
 
 .viewall:hover {
     opacity: 1;
+    color: #3385ff;
 }
 
 .switch {
